<resources>
    <string name="app_name">COVID19 TRACKER</string>

    <string name="todo">TODO</string>
    <string name="total_cases">Total Cases</string>
    <string name="new_cases">New Cases</string>
    <string name="total_deaths">Total Deaths</string>
    <string name="new_deaths">New Deaths</string>
    <string name="total_recovered">Total Recovered</string>
    <string name="new_recovered">New Recovered</string>
    <string name="select_country">Select Country</string>
    <string name="global">Global</string>
</resources>